--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/Ahsan-Zaidi/employee-tracker#readme",
   "dependencies": {
     "console-table": "^0.1.2",
+    "console.table": "^0.10.0",
     "inquirer": "^9.1.1",
     "mysql2": "^2.3.3"
   }
